made second section

--- a/menu.html
+++ b/menu.html
@@ -460,7 +460,7 @@
             <h1 class="section_menu_title">Чай</h1>
     </div>
     <ul class="menu_section">
-        <li>
+        <li class="coffee_17">
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/tea_1.jpg" alt="Чай листовий" height="94" width="90">
                 <div class="container_text_menu">
@@ -469,7 +469,15 @@
                 </div>
             </div>
         </li>
-        <li>
+        <div class="pop_up_menu coffee_popup_17">
+            <div class="nav_line"><span class="nav_line_el"></span></div>
+            <img class="photo_menu_pop_up"  src="./images/tea_popup_1-min.jpg" alt="Чай листовий" >
+            <div class="container_text_menu_pop_up">
+                <p class="title_dish_pop_up">Чай листовий</p>
+                <p class="price_dish_pop_up">35 грн</p>
+            </div>
+        </div>
+        <li class="coffee_18">
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/tea_2.jpg" alt="Чай манго-маракуйя" height="94" width="90">
                 <div class="container_text_menu">
@@ -478,7 +486,15 @@
                 </div>
             </div>
         </li>
-        <li>
+        <div class="pop_up_menu coffee_popup_18">
+            <div class="nav_line"><span class="nav_line_el"></span></div>
+            <img class="photo_menu_pop_up"  src="./images/tea_popup_2-min.jpg" alt="Чай манго-маракуйя" >
+            <div class="container_text_menu_pop_up">
+                <p class="title_dish_pop_up">Чай манго-маракуйя</p>
+                <p class="price_dish_pop_up">50 грн</p>
+            </div>
+        </div>
+        <li class="coffee_19">
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/tea_3.jpg" alt="Чай смородина" height="94" width="90">
                 <div class="container_text_menu">
@@ -487,7 +503,15 @@
                 </div>
             </div>
         </li>
-        <li>
+        <div class="pop_up_menu coffee_popup_19">
+            <div class="nav_line"><span class="nav_line_el"></span></div>
+            <img class="photo_menu_pop_up"  src="./images/tea_popup_3-min.jpg" alt="Чай смородина" >
+            <div class="container_text_menu_pop_up">
+                <p class="title_dish_pop_up">Чай смородина</p>
+                <p class="price_dish_pop_up">50 грн</p>
+            </div>
+        </div>
+        <li class="coffee_20">
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/tea_4.jpg" alt="Чай полуниця" height="94" width="90">
                 <div class="container_text_menu">
@@ -496,7 +520,15 @@
                 </div>
             </div>
         </li>
-        <li>
+        <div class="pop_up_menu coffee_popup_20">
+            <div class="nav_line"><span class="nav_line_el"></span></div>
+            <img class="photo_menu_pop_up"  src="./images/tea_popup_4-min.jpg" alt="Чай полуниця" >
+            <div class="container_text_menu_pop_up">
+                <p class="title_dish_pop_up">Чай полуниця</p>
+                <p class="price_dish_pop_up">50 грн</p>
+            </div>
+        </div>
+        <li class="coffee_21">
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/tea_5.jpg" alt="Чай малина" height="94" width="90">
                 <div class="container_text_menu">
@@ -505,6 +537,14 @@
                 </div>
             </div>
         </li>
+        <div class="pop_up_menu coffee_popup_21">
+            <div class="nav_line"><span class="nav_line_el"></span></div>
+            <img class="photo_menu_pop_up"  src="./images/tea_popup_5-min.jpg" alt="Чай малина" >
+            <div class="container_text_menu_pop_up">
+                <p class="title_dish_pop_up">Чай малина</p>
+                <p class="price_dish_pop_up">50 грн</p>
+            </div>
+        </div>
     </ul>
 
   
@@ -522,6 +562,14 @@
                 </div>
             </div>
         </li>
+        <div class="pop_up_menu coffee_popup_21">
+            <div class="nav_line"><span class="nav_line_el"></span></div>
+            <img class="photo_menu_pop_up"  src="./images/tea_popup_5-min.jpg" alt="Чай малина" >
+            <div class="container_text_menu_pop_up">
+                <p class="title_dish_pop_up">Чай малина</p>
+                <p class="price_dish_pop_up">50 грн</p>
+            </div>
+        </div>
         <li>
             <div class="menu_box" >
                 <img class="photo_menu"  src="./images/ice_coffe_2.jpg" alt="Афогато" height="94" width="90">
