new photo for second section

--- a/menu.html
+++ b/menu.html
@@ -471,7 +471,7 @@
         </li>
         <div class="pop_up_menu coffee_popup_17">
             <div class="nav_line"><span class="nav_line_el"></span></div>
-            <img class="photo_menu_pop_up"  src="./images/tea_popup_1-min.jpg" alt="Чай листовий" >
+            <img class="photo_menu_pop_up"  src="./images/tea_popup_1.jpg" alt="Чай листовий" >
             <div class="container_text_menu_pop_up">
                 <p class="title_dish_pop_up">Чай листовий</p>
                 <p class="price_dish_pop_up">35 грн</p>
@@ -488,7 +488,7 @@
         </li>
         <div class="pop_up_menu coffee_popup_18">
             <div class="nav_line"><span class="nav_line_el"></span></div>
-            <img class="photo_menu_pop_up"  src="./images/tea_popup_2-min.jpg" alt="Чай манго-маракуйя" >
+            <img class="photo_menu_pop_up"  src="./images/tea_popup_2.jpg" alt="Чай манго-маракуйя" >
             <div class="container_text_menu_pop_up">
                 <p class="title_dish_pop_up">Чай манго-маракуйя</p>
                 <p class="price_dish_pop_up">50 грн</p>
@@ -505,7 +505,7 @@
         </li>
         <div class="pop_up_menu coffee_popup_19">
             <div class="nav_line"><span class="nav_line_el"></span></div>
-            <img class="photo_menu_pop_up"  src="./images/tea_popup_3-min.jpg" alt="Чай смородина" >
+            <img class="photo_menu_pop_up"  src="./images/tea_popup_3.jpg" alt="Чай смородина" >
             <div class="container_text_menu_pop_up">
                 <p class="title_dish_pop_up">Чай смородина</p>
                 <p class="price_dish_pop_up">50 грн</p>
@@ -522,7 +522,7 @@
         </li>
         <div class="pop_up_menu coffee_popup_20">
             <div class="nav_line"><span class="nav_line_el"></span></div>
-            <img class="photo_menu_pop_up"  src="./images/tea_popup_4-min.jpg" alt="Чай полуниця" >
+            <img class="photo_menu_pop_up"  src="./images/tea_popup_4.jpg" alt="Чай полуниця" >
             <div class="container_text_menu_pop_up">
                 <p class="title_dish_pop_up">Чай полуниця</p>
                 <p class="price_dish_pop_up">50 грн</p>
@@ -539,7 +539,7 @@
         </li>
         <div class="pop_up_menu coffee_popup_21">
             <div class="nav_line"><span class="nav_line_el"></span></div>
-            <img class="photo_menu_pop_up"  src="./images/tea_popup_5-min.jpg" alt="Чай малина" >
+            <img class="photo_menu_pop_up"  src="./images/tea_popup_5.jpg" alt="Чай малина" >
             <div class="container_text_menu_pop_up">
                 <p class="title_dish_pop_up">Чай малина</p>
                 <p class="price_dish_pop_up">50 грн</p>
