--- a/menu.html
+++ b/menu.html
@@ -979,7 +979,7 @@
         </li>
         <div class="pop_up_menu coffee_popup_46">
             <div class="nav_line"><span class="nav_line_el"></span></div>
-            <img class="photo_menu_pop_up"  src="./images/cold_drink_popup_16 (1).jpg (1).jpg" alt="" >
+            <img class="photo_menu_pop_up"  src="./images/cold_drink_popup_16 (1).jpg" alt="" >
             <div class="container_text_menu_pop_up">
                 <p class="title_dish_pop_up">Сік в асортименті</p>
                 <p class="price_dish_pop_up">35 грн</p> 
