add reviews link

--- a/reviews.html
+++ b/reviews.html
@@ -43,7 +43,8 @@
                 <span class="span_reviews_first">Саме ти</span> можеш допомогти нам стати кращими!<br><br>
                 <span class="span_reviews_second"> Для того щоб залишити відгук, нажми на кнопку нижче, щоб перейти в телеграм-канал та написати свої враження. Кожен відгук буде прочитано особисто власницею Cava Bar для кращої роботи закладу.</span></p>
              </div>
-             <a class="button_reviews" href="">Залишити відгук</a>
+             <a class="button_reviews" href="https://t.me/+LdfVUHQFN0M5NzYy">Залишити відгук</a>
+
              
             <span class="footer_span_reviews"></span>
         </section>
