--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
                 <span class="line"></span>
             </div>
 
-        <section class="menu_top container">
+        <section class="menu_top">
 
             <div class="pacage">
                 <div class="pacage_text_box">
@@ -170,15 +170,9 @@
                 </div>
         </div>
     </div>
-    
-
-
         </section>
   
-<section class="menu_list container">
-
-
-   
+<section class="menu_list">   
 
 
 <ul class="menu_section">
@@ -459,6 +453,7 @@
     <div id="tea" class="box_menu_title" > 
             <h1 class="section_menu_title">Чай</h1>
     </div>
+
     <ul class="menu_section">
         <li class="coffee_17">
             <div class="menu_box" >
@@ -1902,25 +1897,7 @@
        </ul>
 
 </section>
-<!-- <li>
-    <div class="menu_box" >
-        <img class="photo_menu"  src="./images" alt="" height="94" width="90">
-        <div class="container_text_menu">
-            <p class="title_dish"></p>
-            <p class="price_dish coffee"></p>
-        </div>
-    </div>
-</li>
-<li>
-    <div class="menu_box" >
-        <img class="photo_menu"  src="./images" alt="" height="94" width="90">
-        <div class="container_text_menu">
-            <p class="title_dish"></p>
-            <p class="content_dish"></p>
-            <p class="price_dish"></p>
-        </div>
-    </div>
-</li> -->
+
         <span class="footer_span_menu"></span>
     </main>
 
@@ -2040,25 +2017,15 @@
                 </li>
             </ul>
     </div>
-<!-- <div class="pop_up_menu">
-    <div class="nav_line"><span class="nav_line_el"></span></div>
-    <img class="photo_menu_pop_up"  src="./images/pop_up_1.jpg" alt="Буржуйський бургер з телятиною та фрі" >
-    <div class="container_text_menu_pop_up">
-        <p class="title_dish_pop_up">Буржуйський бургер з телятиною та фрі</p>
-        <p class="content_dish_pop_up">Булочка бріош, теляча котлета, сир чедер, бекон, помідор, маринована синя цибуля, яйце смежене, цибуля кранч, бургерний соус + картопля фрі, соус</p>
-        <p class="price_dish_pop_up">220 грн</p>
-    </div>
-</div> -->
+
 
 
 
     <script src="./js/burger_menu.js" ></script>
     <script src="./js/pop_up_categories.js" ></script>
     <script src="./js/pop_up_section_menu.js"></script>
-   <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
    <script src="https://code.jquery.com/jquery-3.7.1.min.js" ></script>
    <script src="./js/slick.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
     <script src="./js/slider.js" ></script> 
    
   
