--- a/menu.html
+++ b/menu.html
@@ -187,7 +187,7 @@
     </li>
     <div class="pop_up_menu coffee_popup_1">
         <div class="nav_line"><span class="nav_line_el"></span></div>
-        <img class="photo_menu_pop_up"  src="./images/coffee_popup_1 (1).jpg" alt="Еспресо" >
+        <img class="photo_menu_pop_up"  src="./images/coffee_popup_1.jpg" alt="Еспресо" >
         <div class="container_text_menu_pop_up">
             <p class="title_dish_pop_up">Еспресо</p>
             <p class="price_dish_pop_up">35 грн</p>
