--- a/menu.html
+++ b/menu.html
@@ -61,7 +61,7 @@
 
             <div class="slider">
                 <div class="slider_item">
-                 <div class="slider_item_box max_box coffee_69" >
+                 <div class="slider_item_box max_box " >
                         <img class="photo_menu"  src="./images/burger_popup_1 (1).jpg" alt="Буржуйський бургер з телятиною та фрі" height="94" width="90">
                         <div class="container_text_menu">
                             <p class="title_dish">Буржуйський бургер з телятиною та фрі</p>
@@ -71,7 +71,7 @@
                  </div>
                 </div>
                 <div class="slider_item">
-                  <div class="slider_item_box coffee_79" >
+                  <div class="slider_item_box " >
                         <img class="photo_menu"  src="./images/waffles_popup_2 (1).jpg" alt="Вафля з лососем" height="94" width="90">
                         <div class="container_text_menu">
                             <p class="title_dish">Вафля з лососем</p>
@@ -81,7 +81,7 @@
                   </div>
                 </div>
                 <div class="slider_item">
-                    <div class="slider_item_box coffee_55" >
+                    <div class="slider_item_box " >
                         <img class="photo_menu"  src="./images/cheesecake_popup_1 (1).jpg" alt="Сирники манго-маракуйя" height="94" width="90">
                         <div class="container_text_menu">
                             <p class="title_dish">Сирники манго-маракуйя</p>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="slider_item">
-                   <div class="slider_item_box coffee_62">
+                   <div class="slider_item_box ">
                         <img class="photo_menu"  src="./images/salads_popup_1 (1).jpg" alt="“Цезар” з куркою" height="94" width="90">
                         <div class="container_text_menu">
                             <p class="title_dish">“Цезар” з куркою</p>
@@ -101,7 +101,7 @@
                    </div>
                 </div>
                 <div class="slider_item">
-                  <div class="slider_item_box coffee_83" >
+                  <div class="slider_item_box " >
                         <img  class="photo_menu" src="./images/waffles_popup_6 (1).jpg" alt="Вафля з солоною карамеллю" height="94" width="90">
                         <div class="container_text_menu">
                             <p class="title_dish">Вафля з солоною карамеллю</p>
@@ -111,7 +111,7 @@
                   </div>
                 </div>
                 <div class="slider_item">
-                   <div class="slider_item_box coffee_64" >
+                   <div class="slider_item_box " >
                         <img class="photo_menu"  src="./images/salads_popup_3 (1).jpg" alt="“Норд” з лососем" height="94" width="90">
                         <div class="container_text_menu">
                             <p class="title_dish">“Норд” з лососем</p>
