--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
                 </div>
             </li>
             <a class="img_logo link" href="./index.html">
-                <img src="../images/logo.svg"  alt="logo" width="102" height="124">
+                <img src="./images/Logo.png"  alt="logo" width="102" height="124">
             </a>
            <li class="inst_head link">
             <a href="https://www.instagram.com/cava_bar_/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw==">
@@ -1925,13 +1925,13 @@
               </div> 
         </div>   
           <a class="logo_footer link"  href="./index.html">
-              <img  src="../images/logo.svg" alt="logo" width="105" height="128">
+              <img  src="./images/Logo.png" alt="logo" width="105" height="128">
           </a>
       </footer>
       <div class="menu_body">
         <div class="modal">
             <div class="svg_modal">
-                <img class="modal_logo" src="../images/logo.svg"  alt="logo" width="105" height="128">
+                <img class="modal_logo" src="./images/Logo.png"  alt="logo" width="105" height="128">
                 <svg  class="modal_cross" width="30" height="30">
                     <use href="./images/symbol-defs.svg#icon-cross"></use>
                 </svg>
