--- a/menu.html
+++ b/menu.html
@@ -251,7 +251,8 @@
     </div>
 
     <div id="dessertMenu"></div>
-    
+    <div class="popup" id="popup"></div>
+
 </section>
 
         <span class="footer_span_menu"></span>
