--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CavaBar</title>
-    <link rel="icon title" href="../images/logo.svg">
+    <link rel="icon title" href="./images/11zon_cropped (3).png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
                 </div>
             </li>
             <a class="img_logo link" href="./index.html">
-                <img src="./images/Logo.png"  alt="logo" width="102" height="124">
+                <img src="./images/logo.svg"  alt="logo" width="102" height="124">
             </a>
            <li class="inst_head link">
             <a href="https://www.instagram.com/cava_bar_/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw==">
@@ -76,13 +76,13 @@
             </div> 
       </div>   
       <a class="logo_footer"  href="./index.html">
-        <img  src="./images/Logo.png" alt="logo" width="105" height="128">
+        <img  src="./images/logo.svg" alt="logo" width="105" height="128">
     </a>
     </footer>
     <div class="menu_body">
         <div class="modal">
             <div class="svg_modal">
-                <img class="modal_logo" src="./images/Logo.png"  alt="logo" width="105" height="128">
+                <img class="modal_logo" src="./images/logo.svg"  alt="logo" width="105" height="128">
                 <svg  class="modal_cross" width="30" height="30">
                     <use href="./images/symbol-defs.svg#icon-cross"></use>
                 </svg>
