changed likn for reviews

--- a/reviews.html
+++ b/reviews.html
@@ -43,7 +43,7 @@
                 <span class="span_reviews_first">Саме ти</span> можеш допомогти нам стати кращими!<br><br>
                 <span class="span_reviews_second"> Для того щоб залишити відгук, нажми на кнопку нижче, щоб перейти в телеграм-канал та написати свої враження. Кожен відгук буде прочитано особисто власницею Cava Bar для кращої роботи закладу.</span></p>
              </div>
-             <a class="button_reviews" href="https://t.me/+LdfVUHQFN0M5NzYy">Залишити відгук</a>
+             <a class="button_reviews" href="https://www.google.com/maps/place/Cava+Bar/@50.0835015,25.1384233,17z/data=!4m8!3m7!1s0x472557b32b598ca9:0x1aaff753bd325bc9!8m2!3d50.0835015!4d25.1409982!9m1!1b1!16s%2Fg%2F11l28bw0yt?entry=ttu">Залишити відгук</a>
 
              
             <span class="footer_span_reviews"></span>
