add weight of items

--- a/menu.html
+++ b/menu.html
@@ -163,11 +163,27 @@
     <div class="slider_item_second">
         <div class="supplements">
                 <div class="supplements_text_box">
+                    <p class="supplements_text">Кокосове молоко</p>
+                    <p class="supplements_text">+20 грн</p>
+                </div>
+        </div>
+    </div>  <div class="slider_item_second">
+        <div class="supplements">
+                <div class="supplements_text_box">
+                    <p class="supplements_text">Вівсяне молоко</p>
+                    <p class="supplements_text">+20 грн</p>
+                </div>
+        </div>
+    </div>
+    <div class="slider_item_second">
+        <div class="supplements">
+                <div class="supplements_text_box">
                     <p class="supplements_text">Вершки</p>
                     <p class="supplements_text">+10 грн</p>
                 </div>
         </div>
     </div>
+
         </section>
   
 <section class="menu_list">   
